feat: migrate dto/vo to Java records